--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
   <div class="left_container">
     <h4 class="picture_person">
-      <img src="\asset\image\avatar.jpg" srcset="" class="pic_person">
+      <img src="https://phuociter.github.io/cv/asset/image/avatar.jpg" srcset="" class="pic_person">
     </h4>
     <h1 class="infor" id="name" style="margin:13px;">Dương Văn Phước</h1>
     <h3 class="infor" id="job" style="margin:5px 16px;">Kỹ sư phần mềm IT</h3>
